--- a/dev/styles/app.css
+++ b/dev/styles/app.css
@@ -1,2 +1,269 @@
+* {
+  margin: 0;
+  padding: 0; }
+
+a {
+  text-decoration: none; }
+
+li {
+  list-style: none; }
+
 body {
-  background: #cca3a3; }
+  font-family: 'PingFangSC-Light',Arial,Helvetica,sans-serif,"Hiragino Sans GB";
+  color: #474747; }
+
+header {
+  width: 100%;
+  border-bottom: 1px solid #e5e5e5;
+  height: 51px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around; }
+  header .LBtn, header .CBtn, header .RBtn {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  header .LBtn .logo {
+    background: url("../images/logo2.png") no-repeat;
+    background-size: 83px 20px;
+    width: 85px;
+    height: 20px;
+    display: inline-block; }
+  header .CBtn .searchBox .search_wrap {
+    border-radius: 17px;
+    padding: 0 10px 0 10px;
+    background-color: #f3f3f3;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    header .CBtn .searchBox .search_wrap input {
+      font-size: 11px;
+      width: 100%;
+      border-radius: 10px;
+      border: 0;
+      outline: 0;
+      background: 0;
+      padding: 7px 10px 7px 0; }
+    header .CBtn .searchBox .search_wrap button {
+      width: 35px;
+      height: 30px;
+      border: 0;
+      outline: 0;
+      background: url("../images/btn_search2.png") no-repeat;
+      background-size: 60%;
+      background-position: 10px; }
+  header .RBtn {
+    width: 40px;
+    height: 36px; }
+    header .RBtn a {
+      display: inline-block;
+      font-size: 14px;
+      color: #ffa800; }
+
+main .swiper-container {
+  width: 100%;
+  position: relative; }
+  main .swiper-container .swiper-wrapper .swiper-slide img {
+    display: inline-block;
+    width: 100%;
+    height: 30%; }
+  main .swiper-container .swiper-scrollbar {
+    width: 30%;
+    height: 5px;
+    position: absolute;
+    left: 35%;
+    bottom: 5%; }
+
+main .nav {
+  padding: 7px 0 10px 0; }
+  main .nav .nav_li {
+    padding: 0 7px 0 7px;
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+    main .nav .nav_li li {
+      width: 25%;
+      height: 90px;
+      display: inline-block; }
+      main .nav .nav_li li a {
+        display: flex;
+        box-sizing: border-box;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        font-size: 16px; }
+        main .nav .nav_li li a i {
+          margin-bottom: 7px;
+          display: inline-block;
+          width: 46px;
+          height: 46px; }
+        main .nav .nav_li li a span {
+          display: inline-block;
+          width: 100%;
+          height: 20px;
+          text-align: center; }
+      main .nav .nav_li li a.i1 {
+        color: #ff9d00; }
+        main .nav .nav_li li a.i1 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: 0px 0px;
+          background-size: 410%; }
+      main .nav .nav_li li a.i5 {
+        color: #feca2b; }
+        main .nav .nav_li li a.i5 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: 0px -47px;
+          background-size: 410%; }
+      main .nav .nav_li li a.i7 {
+        color: #42d6ba; }
+        main .nav .nav_li li a.i7 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: -93px -47px;
+          background-size: 410%; }
+      main .nav .nav_li li a.i6 {
+        color: #f94a87; }
+        main .nav .nav_li li a.i6 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: -47px -47px;
+          background-size: 410%; }
+      main .nav .nav_li li a.i2 {
+        color: #32a2f1; }
+        main .nav .nav_li li a.i2 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: -47px 0px;
+          background-size: 410%; }
+      main .nav .nav_li li a.i3 {
+        color: #fd4e4e; }
+        main .nav .nav_li li a.i3 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: -93px 0px;
+          background-size: 410%; }
+      main .nav .nav_li li a.i4 {
+        color: #acce0e; }
+        main .nav .nav_li li a.i4 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: -140px 0px;
+          background-size: 410%; }
+      main .nav .nav_li li a.i8 {
+        color: #b160df; }
+        main .nav .nav_li li a.i8 i {
+          background: url("../images/i_nav3.png") no-repeat;
+          background-position: -140px -47px;
+          background-size: 410%; }
+
+main .title {
+  width: 100%;
+  height: 13%;
+  background: #f8f8f8;
+  text-align: center; }
+  main .title h3 {
+    display: inline-block;
+    font-size: 15px;
+    color: #999;
+    font-weight: normal;
+    line-height: 34px;
+    position: relative; }
+  main .title h3:before, main .title h3:after {
+    vertical-align: middle;
+    content: "";
+    display: inline-block;
+    width: 15px;
+    height: 15px; }
+  main .title h3:before {
+    background: url("../images/i_guidet.png") no-repeat;
+    background-position: 0 0;
+    background-size: 80%;
+    margin: 0 15px 0 0; }
+  main .title h3:after {
+    background: url("../images/i_guidet.png") no-repeat;
+    background-position: 0 -15px;
+    background-size: 80%;
+    margin: 0  0  0 15px; }
+
+main .cont {
+  width: 100%; }
+  main .cont a {
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    background: url("../images/line3.png") repeat-x;
+    background-position: 0 bottom;
+    background-size: 5px 1px; }
+    main .cont a .tit {
+      padding: 11px 0 0 15px;
+      color: #111;
+      font-size: 20px;
+      line-height: 22px;
+      max-height: 52px;
+      display: flex;
+      box-sizing: border-box;
+      justify-content: space-between; }
+      main .cont a .tit span {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 85%; }
+      main .cont a .tit .tag img {
+        display: block;
+        width: 40px;
+        height: 21px; }
+    main .cont a .ct {
+      display: flex;
+      box-sizing: border-box;
+      justify-content: space-around;
+      align-items: center;
+      width: 100%;
+      padding: 9px 15px 15px 15px; }
+      main .cont a .ct dt {
+        width: 40%; }
+        main .cont a .ct dt img {
+          display: block;
+          width: 90%; }
+      main .cont a .ct dd {
+        display: flex;
+        box-sizing: border-box;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        color: #999;
+        width: 60%; }
+        main .cont a .ct dd .summary {
+          width: 100%;
+          font-size: 14px;
+          padding: 10px 0 0;
+          display: -webkit-box;
+          -webkit-line-clamp: 3;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis; }
+        main .cont a .ct dd .info {
+          display: flex;
+          box-sizing: border-box;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          line-height: 40px; }
+          main .cont a .ct dd .info .extra, main .cont a .ct dd .info .author {
+            font-size: 11px; }
+          main .cont a .ct dd .info .author {
+            display: flex;
+            box-sizing: border-box;
+            justify-content: space-between;
+            align-items: center;
+            width: 45%; }
+            main .cont a .ct dd .info .author img {
+              display: inline-block;
+              border-radius: 50%;
+              width: 22%; }
